# pp2onnx

./: .gitignore  README.md  convert_ppocrv5_to_onnx.py  detect_ppocrv5_onnx.py  pyproject.toml
models/ppocrv5_mobile/: README.md  ppocrv5_mobile_det_fp16.onnx  ppocrv5_mobile_det_int8.onnx
pp2onnx/: __init__.py  convert.py  models.py  quantize.py
tests/: test_convert.py
